--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Christian <hacs@zhaw.ch>"]
 version = "0.1.0"
 
 [deps]
+BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -11,3 +12,4 @@ FLOWMath = "6cb5d3fb-0fe8-4cc2-bd89-9fe0b19a99d3"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyFormattedStrings = "5f89f4a4-a228-4886-b223-c468a82ed5b9"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+Splines = "cf3e9918-c68f-11e8-0adb-adaed3f9c414"
